Fix layout issues on small-screen mobile devices

--- a/www.filebot.net/base.css
+++ b/www.filebot.net/base.css
@@ -187,7 +187,7 @@ div.screenshot.about.zoom:hover {
 
 div.screenshot.about {
 	position: relative;
-	margin: 37px 20px 10px 20px;
+	margin: 37px 0px 10px 20px;
 }
 
 div.video {
